Improve Exec. Summary with example.

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -13,7 +13,7 @@ serial_number: '008'
 doc_id: 'DMTN-008'
 
 # Title of the document, without the series/serial designation
-doc_title: 'Introducing validate_drp: Validate an output repository against SRD Key Performance Metrics'
+doc_title: 'Introducing validate_drp: Validate an output data repository against SRD Key Performance Metrics'
 
 # Author names, ordered as a list. Each author name should be formatted as 'First Last'
 authors:
